load(
    "@gz//bazel/skylark:build_defs.bzl",
    "GZ_FEATURES",
    "GZ_ROOT",
)
load(
    "@gz//bazel/lint:lint.bzl",
    "add_lint_tests",
)

package(
    default_applicable_licenses = [GZ_ROOT + "common:license"],
    features = GZ_FEATURES,
)

cc_test(
    name = "INTEGRATION_console",
    srcs = ["integration/console.cc"],
    env = {
        "GZ_BAZEL": "1",
        "GZ_BAZEL_PATH": "common",
    },
    deps = [
        GZ_ROOT + "common",
        GZ_ROOT + "common/testing",
        "@gtest//:gtest_main",
    ],
)

cc_test(
    name = "INTEGRATION_mesh",
    srcs = ["integration/mesh.cc"],
    data = [
        "data/box.dae",
        "data/box.fbx",
        "data/box.glb",
        "data/box.mtl",
        "data/box.obj",
    ],
    env = {
        "GZ_BAZEL": "1",
        "GZ_BAZEL_PATH": "common",
    },
    deps = [
        GZ_ROOT + "common",
        GZ_ROOT + "common/graphics",
        GZ_ROOT + "common/testing",
        GZ_ROOT + "math",
        "@gtest//:gtest_main",
    ],
)

exports_files(["data"])

add_lint_tests()
